# 633

./: pyproject.toml
hw_django_skypro/config/: db.sqlite3
hw_django_skypro/config/blog/: models.py  urls.py  views.py
hw_django_skypro/config/blog/templates/blog/: base.html  post_form.html
hw_django_skypro/config/catalog/: models.py  urls.py  views.py
hw_django_skypro/config/catalog/templates/catalog/: home.html  layout.html  product_detail.html
hw_django_skypro/config/catalog/templatetags/: custom_filters.py
hw_django_skypro/config/config/: settings.py  urls.py
